--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
+REACT_APP_ACCEPT_HEADER=application/vnd.github.v3+json
+REACT_APP_HOST_NAME=<host_name>
 REACT_APP_REPOSITORY_OWNER=<owner_name>
 REACT_APP_REPOSITORY_NAME=<repository_name>
 REACT_APP_GITHUB_TOKEN="token <your_token>"
