--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-markdown": "^8.0.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-syntax-highlighter": "^15.4.5",
     "react-table": "^7.7.0",
     "typescript": "^4.5.5",
     "web-vitals": "^0.2.4"
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^13.5.2",
     "@types/react-table": "^7.7.9"
   }
 }
